approved all of Simon's changes

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -46,19 +46,19 @@
 \tableofcontents
 
 \newpage
-\section{Allele and \sa{g}enotype frequencies}
+\section{Allele and genotype frequencies}
 
 \subsection{Allele frequencies}
-Consider a diploid autosomal locus segregating \sa{at} two alleles \sa{($A_1$ and $A_2$)}. \sa{Let $N_{11}$ and $N_{12}$ be the number of $A_1A_1$ homozygotes and $A_1A_2$ heterozygotes, respectively. Moreover, let $N$ be the total number of diploid individuals in the population. We can then define the relative frequencies of $A_1A_1$ and $A_1A_2$ genotypes as $f_{11} = N_{11}/N$ and $f_{12} = N_{12}/N$, respectively. The frequency of allele $A_1$ in the population is then given by}
+Consider a diploid autosomal locus segregating at two alleles ($A_1$ and $A_2$). Let $N_{11}$ and $N_{12}$ be the number of $A_1A_1$ homozygotes and $A_1A_2$ heterozygotes, respectively. Moreover, let $N$ be the total number of diploid individuals in the population. We can then define the relative frequencies of $A_1A_1$ and $A_1A_2$ genotypes as $f_{11} = N_{11}/N$ and $f_{12} = N_{12}/N$, respectively. The frequency of allele $A_1$ in the population is then given by
 \begin{equation}
 p = \frac{2 N_{11} + N_{12}}{2N} = f_{11} + \frac{1}{2} f_{12}. % Modified by Simon
 \end{equation}
-\sa{N}ote that this holds independently of Hardy\sa{--}Weinberg proportions and equilibrium [see below]. The frequency of the alternate allele \sa{($A_2$)} is then just $q=1-p$.
+Note that this holds independently of Hardy--Weinberg proportions and equilibrium [see below]. The frequency of the alternate allele ($A_2$) is then just $q=1-p$.
 
-\subsection{Hardy\sa{--}Weinberg \sa{proportions}}
+\subsection{Hardy--Weinberg proportions}
 
 Imagine a population mating at random with respect to genotypes, i.e.\
-no inbreeding, no population structure, no sex differences in allele frequencies. The frequency of allele \sa{$A_1$} in the population at the time of reproduction is $p$. \sa{An $A_1A_1$} genotype is made by reaching out into our population and \sa{independently drawing} two \sa{$A_1$} alelle gametes to form a zygote. Therefore, the probability that \sa{an} individual is \sa{an $A_1A_1$} homozygote is $p^2$. This probability is also the expected frequency of the \sa{$A_1A_1$} homozygote in the population. The expected frequency of \sa{the three possible} genotypes is
+no inbreeding, no population structure, no sex differences in allele frequencies. The frequency of allele $A_1$ in the population at the time of reproduction is $p$. An $A_1A_1$ genotype is made by reaching out into our population and independently drawing two $A_1$ alelle gametes to form a zygote. Therefore, the probability that an individual is an $A_1A_1$ homozygote is $p^2$. This probability is also the expected frequency of the $A_1A_1$ homozygote in the population. The expected frequency of the three possible genotypes is
 %\begin{table}[htp!]
 \begin{center}
 \begin{tabular}{|ccc|}
@@ -72,8 +72,8 @@ $p^2$ & $2pq$ & $q^2$ \\
 %\caption{\textbf{Hardy Weinberg}} \label{table:HWE}
 %\end{table}
 Note that we only need to assume random mating with
-respect to our \sa{alleles} in order for these expected frequencies to hold,
-as long at $p$ is the frequency of the \sa{$A_1$} allele in the population at
+respect to our alleles in order for these expected frequencies to hold,
+as long at $p$ is the frequency of the $A_1$ allele in the population at
 the time when gametes fuse.
 
 
@@ -97,25 +97,25 @@ the time when gametes fuse.
 %Figs/QT1.eps
 
 
-\subsection{\sa{Coefficient of kinship}}
+\subsection{Coefficient of kinship}
 We will define two alleles to be identical by descent if they are
-identical due to a common ancestor in the past few generations. \sa{For the moment, we ignore mutation, and we will be more precise about what we mean by `past few generations' later on.} For example, parent and child share exactly
-one allele identical by descent at a locus\sa{, assuming that the two
-parents of the child are randomly mated individuals from the population}.\\
+identical due to a common ancestor in the past few generations. For the moment, we ignore mutation, and we will be more precise about what we mean by `past few generations' later on. For example, parent and child share exactly
+one allele identical by descent at a locus, assuming that the two
+parents of the child are randomly mated individuals from the population.\\
 
 A key quantity is the probability that our pair of individuals share
 0, 1, or 2 alleles identical by descent. We denote these probabilities
 by $r_0$, $r_1$, and $r_2$ respectively. See Table \ref{table:IBDprobs} for
 some examples. \\
 
-One summary of relatedness \sa{that will be important} is the probability that \sa{two alleles picked at random, one from each of the two different individuals $i$ and $j$, are} identical by descent. We call this quantity the coefficient of kinship of individual\sa{s} $i$ and $j$\sa{, and denote it by $F_{ij}$\sa. It is calculated as}
+One summary of relatedness that will be important is the probability that two alleles picked at random, one from each of the two different individuals $i$ and $j$, are identical by descent. We call this quantity the coefficient of kinship of individuals $i$ and $j$, and denote it by $F_{ij}$. It is calculated as
 \begin{equation}
 F_{ij}= 0 \times r_0 + \frac{1}{4} r_1  + \frac{1}{2} r_2. 
 \label{eqn:coeffkinship}
 \end{equation}
 
-\sa{The coefficient of kinship} will appear multiple times, in both our discussion of
-inbreeding and \sa{in the context of} phenotypic resemblance between relatives.\\
+The coefficient of kinship will appear multiple times, in both our discussion of
+inbreeding and in the context of phenotypic resemblance between relatives.\\
 
 \begin{table}
 \begin{center}
@@ -147,34 +147,34 @@ can be homozygous by descent (sometimes termed autozygous), due to the
 fact that they have two copies of an allele through different paths
 through the pedigree.  This increased likelihood of being homozygous
 relative to an outbred individual is the most obvious effect of
-inbreeding\sa{. It is also} the one that will be of most interest to us\sa{,} as it
+inbreeding. It is also the one that will be of most interest to us, as it
 underlies a lot of our ideas about inbreeding depression and
 population structure.\\
 
 
-As the offspring receives a random allele from each parent ($i$ and $j$)\sa{, } the
-probability that those two alleles are identical by descent is \sa{equal to the}
+As the offspring receives a random allele from each parent ($i$ and $j$), the
+probability that those two alleles are identical by descent is equal to the
 kinship coefficient $F_{ij}$ of the two parents (Eqn.\ \ref{eqn:coeffkinship}). This follows from the fact that
-\sa{the genotype of the offspring} is made by sampling an allele at random from each
-of our parents. \sa{We will use IBD for identical by descent.} \\
+the genotype of the offspring is made by sampling an allele at random from each
+of our parents. We will use IBD for identical by descent. \\
 
 The only way the offspring can be heterozygous ($A_1 A_2$) is if their two alleles at a
-locus are not IBD (otherwise \sa{they would} necessarily be homozygous). Therefore, the probability that they are
+locus are not IBD (otherwise they would necessarily be homozygous). Therefore, the probability that they are
 heterozygous is
 \begin{equation}
 (1-F) 2p q,
 \label{eq:hetGenHW}
 \end{equation}
-\sa{where we have dropped the indices $i$ and $j$ for simplicity.}
-\sa{The} offspring can \sa{be} homozygous for the $A_1$ allele \sa{in} two different ways\sa{. 
-T}hey can have two non-IBD alleles \sa{that are not IBD but} happen to be \sa{of the allelic type $A_1$},
-or their two alleles can be IBD, such that they inherited \sa{allele} $A_1$ by
-two different routes from the same ancestor. Thus\sa{,} the probability \sa{that an offspring is} homozygous is
+where we have dropped the indices $i$ and $j$ for simplicity.
+The offspring can be homozygous for the $A_1$ allele in two different ways. 
+They can have two non-IBD alleles that are not IBD but happen to be of the allelic type $A_1$,
+or their two alleles can be IBD, such that they inherited allele $A_1$ by
+two different routes from the same ancestor. Thus, the probability that an offspring is homozygous is
 \begin{equation}
 (1-F) p^2 + F p.
 \end{equation}
-Therefore, \sa{the frequencies of the three possible genotypes} can be written as given in
-Table \ref{table:GeneralizedHWE}, \sa{which provides a generalization of the} Hardy\sa{--}Weinberg
+Therefore, the frequencies of the three possible genotypes can be written as given in
+Table \ref{table:GeneralizedHWE}, which provides a generalization of the Hardy--Weinberg
 proportions.\\
 
 \begin{table}
@@ -187,32 +187,32 @@ $(1-F) p^2 + F p$ & $(1-F) 2pq$ & $(1-F) q^2 + F q$ \\
 \hline
 \end{tabular}
 \end{center}
-\caption{\textbf{Generalized Hardy\sa{--}Weinberg}} \label{table:GeneralizedHWE}
+\caption{\textbf{Generalized Hardy--Weinberg}} \label{table:GeneralizedHWE}
 \end{table}
 
-Note that the generalized Hardy\sa{--}Weinberg proportions completely
-specify \sa{the} genotype probabilities, as there are two parameters ($p$ and $F$)
-and two degrees of freedom (as \sa{$p$ and $q$} have to sum to one).
+Note that the generalized Hardy--Weinberg proportions completely
+specify the genotype probabilities, as there are two parameters ($p$ and $F$)
+and two degrees of freedom (as $p$ and $q$ have to sum to one).
 Therefore, any combination of genotype frequencies at a biallelic site
 can be specified by a combination of $p$ and $F$.\\
 
 
 \subsection{Calculating inbreeding coefficients from data}
-\sa{If the observed heterozygosity in a population is $H_O$, and we assume that the generalized Hardy--Weinberg proportions hold, we can set $H_O$ equal to $f_{12}$, and solve Eq.\ \eqref{eq:hetGenHW} for $F$ to obtain an estimate of the inbreeding coefficient as}
+If the observed heterozygosity in a population is $H_O$, and we assume that the generalized Hardy--Weinberg proportions hold, we can set $H_O$ equal to $f_{12}$, and solve Eq.\ \eqref{eq:hetGenHW} for $F$ to obtain an estimate of the inbreeding coefficient as
 \begin{equation}
 \hat{F} = 1-\frac{f_{12}}{2pq} = \frac{2pq - f_{12}}{2pq}.
 \label{eqn:Fhat}
 \end{equation}
-\sa{As before,} $p$ is the frequency of \sa{allele $A_{1}$ in the}
+As before, $p$ is the frequency of allele $A_{1}$ in the
 population. This can be rewritten in terms of the observed heterozygosity ($H_O$)
-and \sa{the heterozygosity expected in the absence of inbreeding, $H_E=2pq$, as}
+and the heterozygosity expected in the absence of inbreeding, $H_E=2pq$, as
 \begin{equation}
 \hat{F} = \frac{H_E-H_O}{H_E} = 1 - \frac{H_O}{H_E}.
 \label{eqn:FhatHO}
 \end{equation}
-\sa{Hence, $F$ quantifies the deviation due to inbreeding of the observed heterozygosity from the one expected under random mating, relative to the latter.}
-If we have multiple loci\sa{,} we can replace $H_O$ and $H_E$ by their means
-over loci\sa{, $\bar{H}_O$ and $\bar{H}_E$, respectively}. \sa{Note that, in principle, we could also calculate $F$ for each individual locus first, and then take the average across loci. However, this procedure is more prone to introducing a bias if sample sizes vary across loci, which is not unlikely when we are dealing with real data.}\\
+Hence, $F$ quantifies the deviation due to inbreeding of the observed heterozygosity from the one expected under random mating, relative to the latter.
+If we have multiple loci, we can replace $H_O$ and $H_E$ by their means
+over loci, $\bar{H}_O$ and $\bar{H}_E$, respectively. Note that, in principle, we could also calculate $F$ for each individual locus first, and then take the average across loci. However, this procedure is more prone to introducing a bias if sample sizes vary across loci, which is not unlikely when we are dealing with real data.\\
 
 %==Phenotypic resemblance between relatives ==
 %<source-file filename="Quantative_traits.tex" display="Quantative_traits.wrapped.latexml.xhtml">
@@ -221,93 +221,90 @@ over loci\sa{, $\bar{H}_O$ and $\bar{H}_E$, respectively}. \sa{Note that, in pri
 %<source-file filename="Quantative_traits.tex" display="Quantative_traits.wrapped.latexml.xhtml">
 
 
-\subsection{Summarizing \sa{p}opulation structure}
-\sa{\sout{Our estimated inbreeding coefficient gives us a nice way to take a
-first look at population structure.\\}}
-%
+\subsection{Summarizing population structure}
 We defined inbreeding as having parents that are
-more closely related to each other than \sa{two individuals drawn at random} from some reference population. \sa{T}he question \sa{that naturally arises is: W}hich reference population should we use? While I might not look inbred in
-comparison to allele frequencies in the \sa{United Kingdom (UK), where I am from,} my
-parents certainly \sa{are not two individuals drawn at random from} the
-world-wide population. If we \sa{estimated my inbreeding coefficient $F$} using allele frequencies
-within the UK, \sa{it would} (hopefully)
+more closely related to each other than two individuals drawn at random from some reference population. The question that naturally arises is: Which reference population should we use? While I might not look inbred in
+comparison to allele frequencies in the United Kingdom (UK), where I am from, my
+parents certainly are not two individuals drawn at random from the
+world-wide population. If we estimated my inbreeding coefficient $F$ using allele frequencies
+within the UK, it would 
 be close to zero, but would likely be larger if we used world-wide
-frequencies. \sa{This is} because \sa{there is} a somewhat lower level of
-\sa{expected} heterozygosity within the UK than in the human population across the world as a whole.\\
+frequencies. This is because there is a somewhat lower level of
+expected heterozygosity within the UK than in the human population across the world as a whole.\\
 
-Wright (1943, 1951) developed a set of `F-statistics' (\sa{also called `fixation indices'}) that \sa{formalize the idea
-of inbreeding with respect to different levels of population structure}. \sa{He} defined \sa{$F_{\mathrm{XY}}$} as
-the correlation between random gametes, drawn from the same \sa{level} $X$,
-relative to \sa{level} $Y$. We \sa{will} return to why $F$\sa{-}statistics are statements
-about correlations between alleles in just a moment. One commonly use\sa{s} $\fis$ for the inbreeding
+Wright (1943, 1951) developed a set of `F-statistics' (also called `fixation indices') that formalize the idea
+of inbreeding with respect to different levels of population structure. He defined $F_{\mathrm{XY}}$ as
+the correlation between random gametes, drawn from the same level $X$,
+relative to level $Y$. We will return to why $F$-statistics are statements
+about correlations between alleles in just a moment. One commonly uses $\fis$ for the inbreeding
 coefficient between an individual ($I$) and the subpopulation
-($S$). Consider a single locus, where in a \sa{subpopulation} ($S$) a fraction $H_I=f_{12}$ of \sa{\sout{our}} individuals
-are heterozyg\sa{ous}. In this \sa{subpopulation, let} the frequency of
-allele \sa{$A_1$ be} $p_S$\sa{,} \sa{such that} the expected heterozygosity \sa{under random mating} is \sa{$H_S = 2 p_S (1 - p_S)$}. We will write $\fis$ as
+($S$). Consider a single locus, where in a subpopulation ($S$) a fraction $H_I=f_{12}$ of individuals
+are heterozygous. In this subpopulation, let the frequency of
+allele $A_1$ be $p_S$, such that the expected heterozygosity under random mating is $H_S = 2 p_S (1 - p_S)$. We will write $\fis$ as
 \begin{equation}
 \fis = 1-\frac{H_I}{H_S}= 1-\frac{f_{12}}{2p_Sq_S},
 \label{eqn:FIS}
 \end{equation}
-\sa{a} direct analog of eqn. \ref{eqn:Fhat}\sa{. Hence, $\fis$ is the relative difference between observed and expected heterozygosity due to a deviation from random mating within the subpopulation.} We could also compare \sa{the observed}
+a direct analog of eqn. \ref{eqn:Fhat}. Hence, $\fis$ is the relative difference between observed and expected heterozygosity due to a deviation from random mating within the subpopulation. We could also compare the observed
 heterozygosity in individuals ($H_I$) to that expected in the total
-population\sa{, $H_T$}. If the frequency of \sa{allele $A_1$ in the} total
+population, $H_T$. If the frequency of allele $A_1$ in the total
 population is $p_T$, then we can write $\fit$ as
 \begin{equation}
 \fit =1-\frac{H_I}{H_T}= 1-\frac{f_{12}}{2p_Tq_T},
 \label{eqn:FIT}
 \end{equation}
 which compares heterozygosity in individuals to that expected in the
-total population. As a simple extension of this\sa{, }we could imagine
+total population. As a simple extension of this, we could imagine
 comparing the expected heterozygosity in the subpopulation ($H_S$) to
-that expected \sa{in the} total population ($H_T$), via $\fst$\sa{:}
+that expected in the total population $H_T$, via $\fst$:
 \begin{equation}
 \fst = 1-\frac{H_S}{H_T}=1-\frac{2p_Sq_S}{2p_Tq_T} \label{eqn:FST}.
 \end{equation}
-If \sa{the} total population contains \sa{the subpopulation} then, as \sa{we will} see
-below\sa{,} due to the Wahlund effect (to be added)
+If the total population contains the subpopulation then, as we will see
+below, due to the Wahlund effect (to be added)
  $2p_Sq_S \leq
-2p_Tq_T$\sa{,} and so $\fis \leq \fit$ and $\fst \geq 0$. We can
-relate \sa{the} three $F$\sa{-}statistics \sa{to each other} as
+2p_Tq_T$, and so $\fis \leq \fit$ and $\fst \geq 0$. We can
+relate the three $F$-statistics to each other as
 \begin{equation}
 (1-\hat{\fit}) =\frac{H_I}{H_S} \frac{H_S}{H_T}=(1-\fis)(1-\fst).
 \label{eqn:F_relationships}
 \end{equation}
-\sa{Hence,} the reduction in heterozygosity \sa{within} individuals compared to that expected
+Hence, the reduction in heterozygosity within individuals compared to that expected
 in the total population can be decomposed to the reduction in
-heterozygosity of individuals compared to the \sa{subpopulation}, and the reduction in
-heterozygosity from the total population to that in the \sa{subpopulation}.\\
+heterozygosity of individuals compared to the subpopulation, and the reduction in
+heterozygosity from the total population to that in the subpopulation.\\
 
 If we want a summary of
-population structure across multiple \sa{subpopulations,} we can average $H_I$
+population structure across multiple subpopulations, we can average $H_I$
 and/or $H_S$ across populations, and use a $p_T$ calculated by
-averaging $p_S$ across \sa{subpopulation}s. For example, the average $\fst$ across $K$ subpopulations \sa{(sampled with equal effort)} is
+averaging $p_S$ across subpopulations (or our samples from sub-populations). For example, the average $\fst$ across $K$ subpopulations (sampled with equal effort) is
 \begin{equation}
 	\fst = 1 - \frac{\bar{H}_{S}}{H_T},
 \end{equation}
 where $\bar{H}_S = 1/K \sum_{i = 1}^{K} H_{S}^{(i)}$, and $H_{S}^{(i)} = 2 p_{i} q_{i}$ is the expected heterozygosity in subpopulation $i$.
-Furthermore, if we have multiple sites\sa{,} we can replace $H_I$, $H_S$, and $H_T$ with their averages across loci (as above). \\
+Furthermore, if we have multiple sites, we can replace $H_I$, $H_S$, and $H_T$ with their averages across loci (as above). \\
 
-\sa{Let us} now return to Wright's definition of the \sa{$F$-statistics as correlations} between random gametes, drawn from the same \sa{level} $X$,
-relative to \sa{level} $Y$. \sa{Without} loss of generality\sa{, we may} think about $X$ as
-individuals and $S$ as the \sa{subpopulation}.
-Rewriting $\fis$ in terms of \sa{the observed} homozygote frequencies \sa{($f_{11}$, $f_{22}$) and expected homozygosities ($p_{S}^2$, $q_{S}^2$)} we find
+Let us now return to Wright's definition of the $F$-statistics as correlations between random gametes, drawn from the same level $X$,
+relative to level $Y$. Without loss of generality, we may think about $X$ as
+individuals and $S$ as the subpopulation.
+Rewriting $\fis$ in terms of the observed homozygote frequencies ($f_{11}$, $f_{22}$) and expected homozygosities ($p_{S}^2$, $q_{S}^2$) we find
 \begin{equation}
 \fis = \frac{2p_Sq_S - f_{12}}{2p_Sq_S} = \frac{f_{11}+f_{22} -
 p_S^2 - q_S^2}{2p_Sq_S},
 \label{eqn:Fascorr}
 \end{equation}
-using the fact that $p^2+2pq+q^2=1$\sa{, and $f_{12} = 1 - f_{11} - f_{12}$. The form of eqn.\ (\ref{eqn:Fascorr}) reveals that $\fis$} is the covariance between pairs of alleles
+using the fact that $p^2+2pq+q^2=1$, and $f_{12} = 1 - f_{11} - f_{12}$. The form of eqn.\ (\ref{eqn:Fascorr}) reveals that $\fis$ is the covariance between pairs of alleles
 found in an individual, divided by the
-expected variance under binomial sampling. Thus\sa{,} $F$\sa{-}statistics can be
+expected variance under binomial sampling. Thus, $F$-statistics can be
 understood as the correlation between alleles drawn from a population
 (or an individual) above that expected by chance (i.e.\ drawing alleles
 sampled at random from some broader population).\\
 
-We can also \sa{interpret} $F$\sa{-}statistics as proportions of variance explained by
-\sa{different levels of population structure}. To see this\sa{, let us} think about $\fst$ averaged over $K$
+We can also interpret $F$-statistics as proportions of variance explained by
+different levels of population structure. To see this, let us think about $\fst$ averaged over $K$
 subpopulations, whose frequencies are $p_1,~\cdots,~p_K$. The
 frequency in the total population is $p_T=\bar{p} = 1/K \sum_{i=1}^K p_i$.
-Then\sa{,} we can
+Then, we can
 write
 \begin{equation}
 \fst = \frac{2 \bar{p}\bar{q} - \frac{1}{K}\sum_{i=1}^K 2p_iq_i }{2
@@ -316,7 +313,7 @@ write
 \bar{p}\bar{q}} = \frac{\mathrm{Var}(p_i)}{\mathrm{Var}(\bar{p})},
 \label{eqn:F_as_propvar}
 \end{equation}
-\sa{which shows that} $\fst$ is the proportion of the variance explained by the
+which shows that $\fst$ is the proportion of the variance explained by the
 subpopulation labels.
 
 
